add logistic regression unit test